--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -16,6 +16,7 @@
 	height: 100%;
 	margin-bottom: 5%;
 	text-align: right;
+	min-height: 75px;
 	font-size: 50px;
 	border: 1px solid black;
 	border-radius: 5px;
